CYC-200: Fix popup overlapping bug.

--- a/frontend/CycList/src/app/add-task/add-task.component.scss
+++ b/frontend/CycList/src/app/add-task/add-task.component.scss
@@ -57,6 +57,7 @@ $font-size-add-task: 3.1em;
 }
 
 .menu {
+  z-index: 4;
   transition: all 200ms ease-in-out;
   transform: scale(0);
   transform-origin: bottom right;
@@ -94,6 +95,7 @@ $font-size-add-task: 3.1em;
 }
 
 .overlay {
+  z-index: 3;
   position: absolute;
   top: 0;
   right: 0;
