--- a/frontend/CycList/src/app/task/task.component.scss
+++ b/frontend/CycList/src/app/task/task.component.scss
@@ -6,7 +6,6 @@ $radius-task: calc($radius-todo + $pd-task / 1.3);
 
 .task {
   display: flex;
-  z-index: 1;
   padding: $pd-task;
   transition: all ease-in-out 200ms;
   border-radius: $radius-task;
@@ -163,7 +162,9 @@ $radius-task: calc($radius-todo + $pd-task / 1.3);
 
 
 .menu {
-  z-index: 5;
+  position: fixed;
+  z-index: 2;
+  bottom: 30;
   transition: all 200ms ease-in-out;
   transform-origin: bottom right;
   position: absolute;
@@ -195,8 +196,8 @@ $radius-task: calc($radius-todo + $pd-task / 1.3);
 }
 
 .overlay {
-  z-index: 2;
-  position: absolute;
+  z-index: 1;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
